<resources>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">About</string>
    <string name="msg_sign_out">Do you wish to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enabled">Enabled</string>
    <string name="selected">Selected</string>
    <string name="save">Save</string>
    <string name="alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="dont_close">Don\'t Close</string>
    <string name="close_test">Close Test</string>
    <string name="close_test_and_exit">Close test and exit?</string>
    <string name="dont_cancel">Don\'t Cancel</string>
    <string name="cancel_test">Cancel Test</string>
    <string name="cancel_test_and_exit">Cancel test and exit?</string>
    <string name="action_settings">Settings</string>
    <string name="field_title">field title</string>
    <string name="scan_id">Scan or enter Operator ID</string>
    <string name="scan_pw">Scan or enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log out</string>
    <string name="warning">Warning</string>
    <string name="test_history">Test History</string>
    <string name="test_history_desc">[Test history description]</string>
    <string name="patient_test">New Patient Test</string>
    <string name="patient">Patient</string>
	<string name="patient_with_name">Patient %1$s</string>
    <string name="lot">Lot</string>
    <string name="lot_with_id">Lot %1$s</string>
    <string name="lot_with_hash">Lot #</string>
    <string name="calculation_in_progress">Calculation in progress</string>
    <string name="run_patient_test_desc">Start the patient test</string>
    <string name="run_qa_test">QA Testing</string>
    <string name="run_qa_test_desc">Not implemented.</string>
    <string name="show_active_tests">Show Active Tests</string>
    <string name="settings">Settings</string>
    <string name="settings_s">Settings</string>
    <string name="settings_desc">Go to the settings screen</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Set up the notifications</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="diagnostics_desc">Diagnostics screen</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="go_back">Go back</string>
    <string name="back">Back</string>
    <string name="default_">Default</string>
    <string name="loading">Loading&#8230;</string>
    <string name="test_complete">Test Complete</string>
    <string name="test_results">Test Results</string>
    <string name="test_results_critical_message">There are critical results to be documented!</string>
    <string name="test_animation">Test Animation</string>
    <string name="test_document_results">Document Results</string>
    <string name="test_document_results_msg">There are critical results to be documented!</string>
    <string name="test_close_and_transmit">Close and Transmit</string>
    <string name="text_cnc">CNC</string>
    <string name="text_failed_iqc">iQC</string>
    <string name="start_test_keepdata">Starting new test. Keep previous entries?</string>
    <string name="compliance_data_missing">Some required fields not entered. Continue?</string>
    <string name="criticals_not_documented">Critical results not documented. Continue?</string>
    <string name="qc_failed">QC FAILED</string>
    <string name="analytes_out_of_range">%1$d analytes out of range</string>
	<string name="reader_name_id">Reader:</string>
    <string name="reader_battery_level">%1$d%% battery</string>
    <string name="document_critical_results">Document Critical Results</string>
    <string name="qa_testmenu_testtitle">QA Testing</string>
    <string name="perform_qa_test">Start New QC Test</string>
    <string name="qa_test_history">QC Test History</string>
    <string name="ec_test_history">Electronic Test History</string>
    <string name="thermal_test_history">Thermal Test History</string>
    <string name="qa_testmenu_subtitle_testhistory">Test History</string>
    <string name="qa_testmenu_subtitle_testnow">Test Now</string>
    <string name="set_date_time">SET DATE/TIME</string>
    <string name="set_date_time_desc">Set up date and time on this device</string>
    <string name="test_settings">TEST SETTINGS</string>
    <string name="test_settings_desc">Go to the Test Settings screen</string>
    <string name="host_settings">HOST SETTINGS</string>
    <string name="host_settings_desc">Go to the Host Settings screen</string>
    <string name="reader_settings">READER SETTINGS</string>
    <string name="reader_settings_desc">Go to the Reader Settings screen</string>
    <string name="reader_upgrade">READER UPGRADE</string>
    <string name="thermal_qa">THERMAL QA</string>
    <string name="qa_schedule_settings">QA SCHEDULE SETTINGS</string>
    <string name="qa_schedule_settings_desc">This feature is not implemented yet</string>
    <string name="data_management">DATA MANAGEMENT</string>
    <string name="data_management_desc">This feature is not implemented yet</string>
    <string name="change_name">CHANGE READER NAME</string>
    <string name="exit_host">EXIT HOST</string>
    <string name="exit_host_desc">Sign out and exit the host application</string>
    <string name="kiosk_mode">KIOSK MODE</string>
    <string name="reader_status">READER STATUS</string>
    <string name="about_">ABOUT</string>
    <string name="about_desc">Information about this device.</string>
    <string name="dedicate">Dedicate</string>
    <string name="page">Page</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="set_date">Set date</string>
    <string name="set_date_key">set_date</string>
    <string name="set_date_desc">Set date on the device</string>
    <string name="set_time">Set time</string>
    <string name="set_time_key">set_time</string>
    <string name="set_time_desc">Set time on the device</string>
    <string name="set_timezone">Set timezone</string>
    <string name="set_timezone_key">set_timezone</string>
    <string name="field_settings">FIELD SETTINGS</string>
    <string name="patient_id">Patient ID</string>
    <string name="id2">ID2</string>
    <string name="test_selection">Test selection</string>
    <string name="sample_type">Sample type</string>
    <string name="hemodilution">Hemodilution</string>
    <string name="delivery_system">Delivery system</string>
    <string name="draw_site">Draw site</string>
    <string name="respiratory_mode">Respiratory Mode</string>
    <string name="allens_test">Allen\'s test</string>
    <string name="maximum_length">Maximum length</string>
    <string name="minimum_length">Minimum length</string>
    <string name="patient_id_lookup">Patient ID lookup</string>
    <string name="allow_user_input">Allow user input</string>
    <string name="edit_values">Edit values</string>
    <string name="allow_custom_entry">Allow the custom entry</string>
    <string name="msg_card_needed">Card needed</string>
    <string name="error_enter_number">Please enter a number</string>
    <string name="notify_physician">Notify physician</string>
    <string name="notify_registered_nurse">Notify registered nurse</string>
    <string name="repeated_test">Repeated test</string>
    <string name="send_to_lab">Send to lab</string>
    <string name="other">Other</string>
    <string name="expected_values">Expected values</string>
    <string name="msg_rejecting_test">Rejecting test. Are you sure?</string>
    <string name="lot_number">Fluid Lot</string>
    <string name="fluid_type">Fluid Type</string>
    <string name="test_type">Test Type</string>
    <string name="fluid_reference">Fluid Ref</string>
    <string name="fluid_expiry">Fluid Expiry</string>
    <string name="testtype_unknown">Unknown</string>
    <string name="testtype_blood">Blood</string>
    <string name="testtype_qualitycontrol">Quality Control</string>
    <string name="testtype_calver">Calibration Verification</string>
    <string name="testtype_proficiency">Proficiency</string>
    <string name="testtype_thermalcheck">Thermal Check</string>
    <string name="testtype_eqc">Electronic QC</string>
    <string name="testtype_other">Other</string>
    <string name="all">All</string>
    <string name="gases_plus">Gases+</string>
    <string name="chem_plus">Chem+</string>
    <string name="meta_plus">Meta+</string>
    <string name="delivery_system_edit_values">Delivery System Edit Values</string>
    <string name="draw_site_edit_values">Draw Site Edit Values</string>
    <string name="allens_test_edit_values">Allen\'s Test Edit Values</string>
    <string name="respiratory_mode_edit_values">Respiratory Mode Edit Values</string>
    <string name="units">Units</string>
    <string name="analyte_setup_bgp">Analyte Setup: Gases+</string>
    <string name="analyte_setup_e">Analyte Setup: Chem+</string>
    <string name="analyte_setup_m">Analyte Setup: Meta+</string>
    <string name="reportable_high">Reportable high</string>
    <string name="reportable_low">Reportable low</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="invalid_id">Invalid ID</string>
    <string name="invalid_id_or_password">Invalid ID or Password</string>
    <string name="user_account_lockedout">User account locked. Contact Administrator</string>
    <string name="user_account_disabled">User account disabled. Contact Administrator</string>
    <string name="user_account_expired">User account expired. Contact Administrator</string>
    <string name="password_less_than_min_length">Password must be at least 4 char</string>
    <string name="invalid_inactivity_timer">Inactivity timer must be number from 1 to 60</string>
    <string name="set_date_time_key">set_date_time</string>
    <string name="host_settings_key">host_settings</string>
    <string name="dm_setting_address">Address</string>
    <string name="dm_setting_port">Port</string>
    <string name="invalid_port">invalid port number</string>
    <string name="name_settings">Name settings</string>
    <string name="general_host_settings">General host settings</string>
    <string name="operator_name_and_password_settings">Operator name and password</string>
    <string name="language_settings">Set language</string>
    <string name="user_settings">Users</string>
    <string name="printer_settings">Printers</string>
    <string name="barcode_settings">Barcode Settings</string>
    <string name="upgrade_settings">Upgrade</string>
    <string name="reader_settings_status">Status</string>
    <string name="reader_settings_dedicate">Dedicate</string>
    <string name="reader_settings_page">Page</string>
    <string name="reader_settings_upgrade">Upgrade</string>
    <string name="reader_settings_thermal_qa">Thermal QA</string>
    <string name="reader_settings_change_name">Change Name</string>
    <string name="reader_settings_status_menu_01">Get reader status</string>
    <string name="reader_settings_dedicate_menu_01">Dedicated readers</string>
    <string name="reader_settings_page_menu_01">Page reader</string>
    <string name="reader_settings_upgrade_menu_01">Upgrade reader</string>
    <string name="reader_settings_thermal_qa_menu_01">Thermal QA</string>
    <string name="reader_settings_change_name_menu_01">Change reader name</string>
    <string name="empty_string"></string>
    <string name="analyte">Analyte</string>
</resources>