<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/reader_setting_reader_status"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty_string"
                android:src="@mipmap/dedicated_reader" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imageView1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_status"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_status_menu_01"
                    android:textColor="@color/colorAlereLightGray"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reader_setting_reader_dedicate"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty_string"
                android:src="@mipmap/dedicated_reader" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imageView2"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_dedicate"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_dedicate_menu_01"
                    android:textColor="@color/colorAlereLightGray"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reader_setting_reader_page"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty_string"
                android:src="@mipmap/dedicated_reader" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imageView3"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_page"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_page_menu_01"
                    android:textColor="@color/colorAlereLightGray"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reader_setting_reader_upgrade"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty_string"
                android:src="@mipmap/dedicated_reader" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imageView4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_upgrade"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_upgrade_menu_01"
                    android:textColor="@color/colorAlereLightGray"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reader_setting_reader_thermalQA"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty_string"
                android:src="@mipmap/dedicated_reader" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imageView5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_thermal_qa"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_thermal_qa_menu_01"
                    android:textColor="@color/colorAlereLightGray"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reader_setting_reader_change_name_pin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty_string"
                android:src="@mipmap/dedicated_reader" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imageView6"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_change_name"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/reader_settings_change_name_menu_01"
                    android:textColor="@color/colorAlereLightGray"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
