<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/textView_analyte_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/analyte"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView_analyte_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView_analyte_name"
        android:layout_marginEnd="20dp"
        android:text="@string/units"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView_reportable_high_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_analyte_name"
        android:layout_below="@+id/textView_analyte_name"
        android:layout_marginTop="5dp"
        android:text="@string/reportable_high"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView_reportable_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_analyte_unit"
        android:layout_alignTop="@+id/textView_reportable_high_label"
        android:text="8.000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView_reportable_low_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_reportable_high_label"
        android:layout_below="@+id/textView_reportable_high_label"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/reportable_low"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView_reportable_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_reportable_low_label"
        android:layout_alignEnd="@+id/textView_reportable_high"
        android:text="6.500"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"/>
</RelativeLayout>