<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:id="@+id/lvExp10"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/reader_setting_reader_status"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/empty_string"
                    android:src="@mipmap/dedicated_reader"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/imageView2"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/set_date_time"
                        android:textColor="#000"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/set_date_time_desc"
                        android:textColor="@color/colorAlereLightGray"
                        android:textSize="14sp"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

<ExpandableListView
    android:id="@+id/lvExp"
    android:layout_weight="1"
    android:nestedScrollingEnabled="true"
    android:layout_height="0dp"
    android:layout_width="match_parent"/>

</LinearLayout>
